# CXX-DeepLearning-Inference

./: .gitignore  CMakeLists.txt  README.md
common/: common.cpp  common.h  config.h.in
config/: yolov8.yaml  yolov8_normal.yaml  yolov8_seg.yaml
config/clip/: image_encoder.yaml  prompts.txt  text_encoder.yaml
config/crnn/: crnn.yaml
config/ocr/: attn.yaml
config/ocr/det/: dbnet.yaml
config/ocr/rec/: ctc.yaml
config/sam/: image_encoder.yaml  mask_decoder.yaml
config/yolo/: yolo.yaml  yolo_cutoff.yaml  yolo_pose.yaml  yolo_seg.yaml  yolo_seg_cutoff.yaml  yolov8_e2e.yaml  yolov8_normal.yaml  yolov8_seg.yaml
doc/environment/: cuda-on-linux.md  cuda-on-wsl.md  onnxruntime.md
doc/model/: abinet.md  clip.md  crnn.md  dbnet.md  sam.md  yolo.md  yolov8.md
framework/: CMakeLists.txt  framework.h
framework/common/: common.cpp  common.h  framework.h
framework/onnx/: onnx.cpp  onnx.h
framework/rknn/: rknn.cpp  rknn.h
framework/tensorrt/: tensorrt.cpp  tensorrt.h
model/: CMakeLists.txt
model/base/: cv_model.cpp  cv_model.h  detection_model.cpp  detection_model.h  model.cpp  model.h  ocr_model.cpp  ocr_model.h
model/clip/: CMakeLists.txt  clip.cpp  clip.h  image_encoder.cpp  image_encoder.h  test.cpp  text_encoder.cpp  text_encoder.h  text_tokenizer.cpp  text_tokenizer.h
model/crnn/: crnn.cpp  crnn.h  export.py
model/ocr/: attention.cpp  attention.h  ctc.cpp  ctc.h  dbnet.cpp  dbnet.h
model/ocr/scripts/: abinet_export.py  crnn_export.py  dbnet_export.py
model/sam/: image_encoder.cpp  image_encoder.h  mask_decoder.cpp  mask_decoder.h  sam.cpp  sam.h
model/yolo/: common.py  export-det.py  export-seg.py  test.py  yolo.cpp  yolo.h  yolo_cutoff.cpp  yolo_cutoff.h  yolo_pose.cpp  yolo_pose.h  yolo_seg.cpp  yolo_seg.h  yolo_seg_cutoff.cpp  yolo_seg_cutoff.h  yolov8-pose-export.py  yolov9-det-export.py
model/yolov8/: common.py  export-det.py  yolov8.cpp  yolov8.h  yolov8_e2e.cpp  yolov8_e2e.h  yolov8_seg.cpp  yolov8_seg.h
test/: CMakeLists.txt  clip_test.cpp  crnn_test.cpp  ocr_test.cpp  sam_test.cpp  test.cpp  yolo_test.cpp  yolov8_test.cpp
test/yolov8/: yolov8_test.cpp
